Alteração nos links e icones

--- a/resources/views/Dia13/index.html
+++ b/resources/views/Dia13/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <title>Dia 13</title>
     <link rel="stylesheet" href="/css/dia13.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
 </head>
 
 <body>
