--- a/resources/views/Dia8/index.html
+++ b/resources/views/Dia8/index.html
@@ -12,6 +12,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/css/dia8.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
     <title>Dia 8</title>
 </head>
 
