--- a/resources/views/Dia10/index.html
+++ b/resources/views/Dia10/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
     <title>Dia 10</title>
     <style>
         body {
@@ -18,4 +19,5 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.2.3/tsparticles.bundle.min.js"></script>
 <script src="js/dia10.js"></script>
+
 </html>
