--- a/resources/views/Dia11/index.html
+++ b/resources/views/Dia11/index.html
@@ -8,6 +8,7 @@
     <title>Dia 11</title>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/dia11.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
 </head>
 
 <body>
