--- a/resources/views/Dia12/index.html
+++ b/resources/views/Dia12/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-        <link rel="stylesheet" href="/css/dia12.css">
+    <link rel="stylesheet" href="/css/dia12.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
     <title>Dia 12</title>
 </head>
 
