--- a/resources/views/Dia15/index.html
+++ b/resources/views/Dia15/index.html
@@ -11,7 +11,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/dia15.css">
+    <link rel="stylesheet" href="/css/dia15.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
 </head>
 
 <body>
@@ -223,7 +224,7 @@
         </div>
 
         <footer>
-            <p  class="logo">Um footer maneiro ae</p>
+            <p class="logo">Um footer maneiro ae</p>
         </footer>
 
     </main>
