--- a/resources/views/Dia18/index.html
+++ b/resources/views/Dia18/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dia 18</title>
     <link rel="stylesheet" href="/css/dia18.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
 </head>
 
 <body>
