--- a/resources/views/Dia2/index.html
+++ b/resources/views/Dia2/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
     <link href="/css/dia2.css" rel="stylesheet">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
 </head>
 
 <body>
