--- a/resources/views/Dia3/index.html
+++ b/resources/views/Dia3/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/dia3.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
     <title>Dia 3</title>
 </head>
 
