--- a/resources/views/Dia5/pagina404.html
+++ b/resources/views/Dia5/pagina404.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/pagina404.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
     <title>Dia 5 - 404</title>
 </head>
 
