--- a/resources/views/Dia6/index.html
+++ b/resources/views/Dia6/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-        <link rel="stylesheet" href="/css/dia6.css">
+    <link rel="stylesheet" href="/css/dia6.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
     <title>Dia 6</title>
 </head>
 
