--- a/resources/views/Dia7/index.html
+++ b/resources/views/Dia7/index.html
@@ -8,7 +8,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;1,300&family=Orbitron&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="css//dia7.css">
+    <link rel="stylesheet" href="css//dia7.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
     <title>Dia 7</title>
 </head>
 
