--- a/resources/views/Dia9/index.html
+++ b/resources/views/Dia9/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;1,300&family=Orbitron&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/css/dia9.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
 </head>
 
 <body>
