--- a/resources/views/home/index.html
+++ b/resources/views/home/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="icon" sizes="192x192" href="/imgs/icon.png">
     <title>Desafio Rocketseat</title>
 </head>
 
@@ -16,121 +17,121 @@
 
         <div class="card">
             <span><i class="fa-solid fa-earth-americas"></i></span>
-            <a class="card-link" href="/dia2">Dia 2</a>
+            <a class="card-link" href="/dia2" target="_blank">Dia 2</a>
             <span>Hello World</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-toggle-off"></i></span>
-            <a class="card-link" href="/dia3">Dia 3</a>
+            <a class="card-link" href="/dia3" target="_blank">Dia 3</a>
             <span>Botão Animado</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-calculator"></i></span>
-            <a class="card-link" href="/dia4">Dia 4</a>
+            <a class="card-link" href="/dia4" target="_blank">Dia 4</a>
             <span>Calculadora</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-triangle-exclamation"></i></span>
-            <a class="card-link" href="/dia5">Dia 5</a>
+            <a class="card-link" href="/dia5" target="_blank">Dia 5</a>
             <span>Página 404</span>
         </div>
 
         <div class="card">
             <span><i class="fa-regular fa-address-card"></i></span>
-            <a class="card-link" href="/dia6">Dia 6</a>
+            <a class="card-link" href="/dia6" target="_blank">Dia 6</a>
             <span>Glass Card</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-stopwatch-20"></i></span>
-            <a class="card-link" href="/dia7">Dia 7</a>
+            <a class="card-link" href="/dia7" target="_blank">Dia 7</a>
             <span>Contador</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-toggle-on"></i></span>
-            <a class="card-link" href="/dia8">Dia 8</a>
+            <a class="card-link" href="/dia8" target="_blank">Dia 8</a>
             <span>Claro/Escuro</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-spinner"></i></span>
-            <a class="card-link" href="/dia9">Dia 9</a>
+            <a class="card-link" href="/dia9" target="_blank">Dia 9</a>
             <span>Loading</span>
         </div>
 
         <div class="card">
             <span><i class="fa-brands fa-connectdevelop"></i></span>
-            <a class="card-link" href="/dia10">Dia 10</a>
+            <a class="card-link" href="/dia10" target="_blank">Dia 10</a>
             <span>Particles</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-right-to-bracket"></i></span>
-            <a class="card-link" href="/dia11">Dia 11</a>
+            <a class="card-link" href="/dia11" target="_blank">Dia 11</a>
             <span>Login</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-images"></i></span>
-            <a class="card-link" href="/dia12">Dia 12</a>
+            <a class="card-link" href="/dia12" target="_blank">Dia 12</a>
             <span>Galeria</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-bars"></i></span>
-            <a class="card-link" href="/dia13">Dia 13</a>
+            <a class="card-link" href="/dia13" target="_blank">Dia 13</a>
             <span>Menu</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-comments"></i></span>
-            <a class="card-link" href="/dia14">Dia 14</a>
+            <a class="card-link" href="/dia14" target="_blank">Dia 14</a>
             <span>Quiz</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-cart-shopping"></i></span>
-            <a class="card-link" href="/dia15">Dia 15</a>
+            <a class="card-link" href="/dia15" target="_blank">Dia 15</a>
             <span>E-commerce</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-cloud-arrow-down"></i></span>
-            <a class="card-link" href="/dia16">Dia 16</a>
+            <a class="card-link" href="/dia16" target="_blank">Dia 16</a>
             <span>API</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-square-root-variable"></i></span>
-            <a class="card-link" href="/dia17">Dia 17</a>
+            <a class="card-link" href="/dia17" target="_blank">Dia 17</a>
             <span>Calculadora 2.0</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-key"></i></span>
-            <a class="card-link" href="/dia18">Dia 18</a>
+            <a class="card-link" href="/dia18" target="_blank">Dia 18</a>
             <span>Gerador Senha</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-image"></i></span>
-            <a class="card-link" href="/dia19">Dia 19</a>
+            <a class="card-link" href="/dia19" target="_blank">Dia 19</a>
             <span>Gerador Imagem</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-icons"></i></span>
-            <a class="card-link" href="/dia20">Dia 20</a>
+            <a class="card-link" href="/dia20" target="_blank">Dia 20</a>
             <span>Emoji Picker</span>
         </div>
 
         <div class="card">
             <span><i class="fa-solid fa-user"></i></span>
-            <a class="card-link" href="https://vinicius-mendonca.netlify.app/">Dia 21</a>
+            <a class="card-link" href="https://vinicius-mendonca.netlify.app/" target="_blank">Dia 21</a>
             <span>Portfólio</span>
         </div>
 
